atualizando música e fundos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="panel">
         <!-- Imagem da capa da música -->
-        <img src="fotos/start.4jpg" alt="Capa da Música" class="cover-image" id="coverImage">
+        <img src="fotos/" alt="Capa da Música" class="cover-image" id="coverImage">
 
         <!-- Nome da música abaixo da imagem -->
         <div id="songTitle" class="song-title">Música 1</div>
